Alter name project Camunda Basic to Basic

--- a/Camunda/Basic/pom.xml
+++ b/Camunda/Basic/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.example.basic</groupId>
-  <artifactId>Camunda Basic</artifactId>
+  <artifactId>Basic</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
   <properties>
