--- a/Tests/General/build.gradle
+++ b/Tests/General/build.gradle
@@ -12,11 +12,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    testImplementation "org.mockito:mockito-core:3.+"
-    testImplementation("org.mockito:mockito-junit-jupiter:4.2.0")
-
-    //method static
-    testImplementation "org.mockito:mockito-inline:3.+"
+    testImplementation("org.springframework:spring-test:5.3.15")
 
 }
 
