--- a/RabbitMQ/ProducerAndConsumer/Consumer/build.gradle
+++ b/RabbitMQ/ProducerAndConsumer/Consumer/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'br.example'
+group 'org.example'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -11,15 +11,10 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-    implementation("org.springframework.boot:spring-boot-starter-web:2.6.2")
-
-    implementation('org.apache.kafka:kafka-streams:3.0.0')
-    implementation('org.springframework.kafka:spring-kafka:2.8.1')
-
+    implementation("org.springframework.boot:spring-boot-starter-web:2.6.3")
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
+    implementation("org.springframework.boot:spring-boot-starter-amqp:2.6.3")
 }
 
 test {
