--- a/Tests/Data/LoadingInitialDB/SQLServer/build.gradle
+++ b/Tests/Data/LoadingInitialDB/SQLServer/build.gradle
@@ -16,9 +16,10 @@ dependencies {
     testImplementation("org.springframework.boot:spring-boot-starter-test:2.6.3")
     implementation("org.springframework.boot:spring-boot-starter-web:2.6.3")
     testImplementation("com.h2database:h2:2.1.210")
-
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    implementation("org.liquibase:liquibase-core:4.7.1")
 }
 
 test {
