--- a/Tests/Data/LoadingInitialDB/SQLServer/src/test/resources/application.properties
+++ b/Tests/Data/LoadingInitialDB/SQLServer/src/test/resources/application.properties
@@ -1,10 +1,5 @@
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:data;MODE=MSSQLServer;INIT=CREATE SCHEMA IF NOT EXISTS credit
-spring.datasource.username=dev
-spring.datasource.password=dev
-spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.datasource.url=jdbc:h2:mem:data;DB_CLOSE_DELAY=-1;MODE=MSSQLServer;INIT=CREATE SCHEMA IF NOT EXISTS credit
 spring.test.database.replace=none
-spring.jpa.hibernate.ddl-auto=create-only
-
+spring.jpa.hibernate.ddl-auto=validate
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
